--- a/conf2016_viz_app/appserver/static/visualizations/event_sort/visualization.css
+++ b/conf2016_viz_app/appserver/static/visualizations/event_sort/visualization.css
@@ -13,3 +13,8 @@
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, Helvetica;
   cursor: pointer;  
 }
+
+.splunk-event-sort .bar-label {
+  fill: #aaa;
+  font-size: 15px;
+}
